--- a/faculty/templates/faculty/base.html
+++ b/faculty/templates/faculty/base.html
@@ -85,7 +85,7 @@
           </li>
 
           <li class="mt">
-          	{% if request.path == '/faculty/student_result/' %}
+          	{% if request.path == '/faculty/studentresult/' %}
             <a class="active" href="{% url 'student_result' %}">
             {% else %}
             <a href="{% url 'student_result' %}">
