--- a/users/templates/users/backlogs.html
+++ b/users/templates/users/backlogs.html
@@ -10,7 +10,7 @@
 	
 </head>
 <body> 
-  <br><a href="{% url 'elective' %}" style="color:blue;">Back</a>
+  <br><a href="{% url 'home' %}" style="color:blue;">Back</a>
   <h3> <span class="badge badge-secondary">Backlogs</span></h3>
   <br>
   {% if backlogs %}
