--- a/exam/templates/exam/result.html
+++ b/exam/templates/exam/result.html
@@ -10,7 +10,7 @@
 	
 </head>
 <body>
-	<br><h4>View Result</h4><br>
+	<br><h3> <span class="badge badge-secondary">View Result</span></h3><br>
 	<div class="mdl-cell mdl-cell--12-col mdl-grid">
 	<div>
 	<p>Select semester</p>
