--- a/users/templates/users/select_elective.html
+++ b/users/templates/users/select_elective.html
@@ -10,7 +10,7 @@
 	
 </head>
 <body>
-	<br><h4>Elective</h4><br>
+	<br><h3> <span class="badge badge-secondary">Elective</span></h3><br>
 	<div class="mdl-cell mdl-cell--12-col mdl-grid">
 	<div>
 	<p>Choose Elective</p>
