--- a/users/templates/users/select_elective_sem.html
+++ b/users/templates/users/select_elective_sem.html
@@ -4,14 +4,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-		<title>Elective</title>
-
-	
+		<title>Elective</title>	
 </head>
 <body>
-	<br><h4>Elective</h4>
-  <br><a href="{% url 'elective' %}" style="color:blue;">Back</a><br>
+  <br><a href="{% url 'elective' %}" style="color:blue;">Back</a>
+	<br><h3> <span class="badge badge-secondary">Elective</span></h3>  
 	<div class="mdl-cell mdl-cell--12-col mdl-grid">
 	<div>
 	<p>Choose Semester</p>
