--- a/exam/templates/exam/base.html
+++ b/exam/templates/exam/base.html
@@ -84,19 +84,19 @@
 		      <li class="nav-item dropdown">
 		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		          <i class="fa fa-envelope-o">
-		            <span class="badge badge-primary">11</span>
+		            <!--<span class="badge badge-primary">11</span>-->
 		          </i>
 		          More
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="#">More items</a>
+		          <!--<a class="dropdown-item" href="#">More items</a>-->
 		          <a class="dropdown-item" href="{% url 'elective' %}">Elective</a>
 		          <div class="dropdown-divider"></div>
 		          <a class="dropdown-item" href="{% url 'backlogs' %}">Backlogs</a>
 		        </div>
 		      </li>
 		    </ul>
-		    <ul class="navbar-nav ">
+		    <!--<ul class="navbar-nav ">
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">
 		          <i class="fa fa-bell">
@@ -114,9 +114,12 @@
 		        </a>
 		      </li>
 		      {% endif %}
-		    </ul>
+		    </ul>-->
 
 		    {% if user.is_authenticated %}
+		      <ul class="navbar-nav ">
+			      <a class="navbar-brand" href="{% url 'home' %}">Welcome {{ user.first_name }}</a>
+		  	  </ul>
 		      <form class="form-inline my-2 my-lg-0" action= "{% url 'logout' %}">
 		      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" >Logout</button>
 		    {% else %}
