--- a/exam/templates/exam/showresult.html
+++ b/exam/templates/exam/showresult.html
@@ -13,7 +13,7 @@
 <body>
 	<br><a href="{% url 'result' %}" style="color:blue;">Back</a><br>
 	<div id="printableArea">
-	<h3>Result </h3>	
+	<h3> <span class="badge badge-secondary">Result</span></h3>	
 		
 	<table class="table table-sm">  
 	  <tbody>	    
