--- a/faculty/templates/faculty/approve_elective.html
+++ b/faculty/templates/faculty/approve_elective.html
@@ -26,7 +26,8 @@
 			     	<th scope="row">{{ ele.user.first_name }} {{ ele.user.last_name }}</th>
 			       <th scope="row">{{ ele.semester }}</th>
 			       <th scope="row">{{ ele.elective }}</th>
-			       <th scope="row"><button class="btn btn-primary btn-sm" type="submit">Approve</a></th>
+			       <th scope="row"><button class="btn btn-primary btn-sm"  name="response" value="approve" type="submit">Approve</a></th>
+			       <th scope="row"><button class="btn btn-danger btn-sm" name="response" value="reject" type="submit">Reject</a></th>
 			       
 			    </tr>
 			    </form>	
