--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -49,7 +49,7 @@
 					{% csrf_token %}
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" placeholder="Enrollment number">
+						<input class="input100" type="text" name="username" placeholder="Enrollment number or Email">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
