--- a/exam/templates/exam/syllabus.html
+++ b/exam/templates/exam/syllabus.html
@@ -6,19 +6,19 @@
 <head>
 	    <script src="{% static 'exam/js/print.js' %}"></script>
 
-		<title>Announcements</title>
+		<title>Syllabus</title>
 
 	
 </head>
 <body>
 	<a href="{% url 'home' %}" style="color:blue;">Back</a>
-	<h3> <span class="badge badge-secondary">Announcements</span></h3>
+	<h3> <span class="badge badge-secondary">Syllabus</span></h3>
 	<div class="list-group">	
-	{% for announce in announcements %}	
-		{% if announce.file %}
-			<a href="/{{ announce.file }}/" class="list-group-item list-group-item-action list-group-item-info">{{ announce.title }}</a>
+	{% for syl in syllabus %}	
+		{% if syl.file %}
+			<a href="/{{ syl.file }}/" class="list-group-item list-group-item-action list-group-item-info">{{ syl.title }}</a>
 		{% else %}
-			<a class="list-group-item">{{ announce.title }}</a>
+			<a class="list-group-item">{{ syl.title }}</a>
 		{% endif %}
 	{% endfor %}
 	</div>
