--- a/exam/templates/exam/base.html
+++ b/exam/templates/exam/base.html
@@ -88,7 +88,7 @@
 		          </i>
 		          More
 		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+		        <div class="dropdown-menu" style="font-size: 1.28rem;" aria-labelledby="navbarDropdown">
 		          <!--<a class="dropdown-item" href="#">More items</a>-->
 		          <a class="dropdown-item" href="{% url 'elective' %}">Elective</a>
 		          <div class="dropdown-divider"></div>
