Added image on homepage

--- a/faculty/templates/faculty/base.html
+++ b/faculty/templates/faculty/base.html
@@ -69,8 +69,8 @@
             {% else %}
             <a href="{% url 'f_home' %}">
             {% endif %}
-              <i class="fa fa-dashboard"></i>
-              <span>Dashboard</span>
+              <i class="fa fa-home"></i>
+              <span>Home</span>
               </a>
           </li>
 
