Front end changes

--- a/exam/templates/exam/base.html
+++ b/exam/templates/exam/base.html
@@ -149,12 +149,12 @@
 		    <div class="col-md-3">
 		      <div class="content-section">	
 		      	<br> 
-		      	<h3><span class="badge badge-info">Important Links</span></h3>
+		      	<h3 style="padding-left: 0px;margin-left: 80px;"><span class="badge badge-info">Important Links</span></h3>
 		          <ul class="list-group">
 		      
-		            <a href="{% url 'announcements' %}" class="list-group-item list-group-item-action list-group-item-dark">Announcements</a>
-		            <a href="{% url 'syllabus' %}" class="list-group-item list-group-item-action list-group-item-dark">Syllabus</a>
-		            <a href="{% url 'calendar' %}" class="list-group-item list-group-item-action list-group-item-dark">Academic Calendar and Holidays</a>
+		            <a href="{% url 'announcements' %}" class="list-group-item list-group-item-action list-group-item-dark" style="margin-left: 80px;">Announcements</a>
+		            <a href="{% url 'syllabus' %}" class="list-group-item list-group-item-action list-group-item-dark" style="margin-left: 80px;">Syllabus</a>
+		            <a href="{% url 'calendar' %}" class="list-group-item list-group-item-action list-group-item-dark" style="margin-left: 80px;">Academic Calendar and Holidays</a>
 		          </ul>
 		        </p>
 		      </div>
