--- a/exam/templates/exam/base.html
+++ b/exam/templates/exam/base.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'exam/main.css' %}">
       <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
+      <link rel="shortcut icon" type="image/png" href="{% static 'exam/images/favicon.ico' %}"/>
+
 
 <link rel="stylesheet" href="{% static 'exam/fonts/material-icons.css' %}">
         <link rel="stylesheet" href="{% static 'exam/css/material.min.css' %}">
